--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -10,11 +10,6 @@
 
 /* reset code and common ends here */
 
-.main {
-    display: flex;
-    flex-direction: column;
-}
-
 .nav_bar {
     display: flex;
     background-color: lightseagreen;
@@ -36,6 +31,10 @@
 .nav_right {
     margin-left: 10rem;
     font-size: 23px;
+}
+
+h2{
+    text-align: center;
 }
 
 .main {
@@ -74,34 +73,40 @@
     margin: 0.5rem;
 }
 
+.error {
+    color: red;
+}
+
 
 @media (max-width: 992px) {
-    .products{
+    .products {
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
-    .main{
+    .main {
         flex-direction: column;
     }
-    .nav_bar{
+
+    .nav_bar {
         flex-direction: column;
         height: 12vh;
     }
 }
 
 @media (max-width: 768px) {
-    .products{
+    .products {
         grid-template-columns: repeat(1, minmax(0, 1fr));
     }
 
-    .main{
+    .main {
         flex-direction: column;
     }
 
-    .nav_bar{
+    .nav_bar {
         height: 36vh;
     }
-    .nav_left{
+
+    .nav_left {
         flex-direction: column;
     }
 }
